<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Quiz app"
            android:textSize="26sp"
            android:gravity="center"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question1"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/question1"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_str"
                android:paddingLeft="10dp"
                android:layout_marginLeft="70dp"
                android:id="@+id/question1_true"
                android:layout_marginRight="100dp"
                android:layout_below="@id/question1"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_str"
                android:paddingLeft="10dp"
                android:id="@+id/question1_false"
                android:layout_toRightOf="@id/question1_true"
                android:layout_below="@id/question1"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question2"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/question2"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_str"
                android:paddingLeft="10dp"
                android:layout_marginLeft="70dp"
                android:id="@+id/question2_true"
                android:layout_marginRight="100dp"
                android:layout_below="@id/question2"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_str"
                android:paddingLeft="10dp"
                android:id="@+id/question2_false"
                android:layout_toRightOf="@id/question2_true"
                android:layout_below="@id/question2"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question3"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/question3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_str"
                android:paddingLeft="10dp"
                android:layout_marginLeft="70dp"
                android:id="@+id/question3_true"
                android:layout_marginRight="100dp"
                android:layout_below="@id/question3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_str"
                android:paddingLeft="10dp"
                android:id="@+id/question3_false"
                android:layout_toRightOf="@id/question3_true"
                android:layout_below="@id/question3"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question4"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/question4"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_str"
                android:paddingLeft="10dp"
                android:layout_marginLeft="70dp"
                android:id="@+id/question4_true"
                android:layout_marginRight="100dp"
                android:layout_below="@id/question4"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_str"
                android:paddingLeft="10dp"
                android:id="@+id/question4_false"
                android:layout_toRightOf="@id/question4_true"
                android:layout_below="@id/question4"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question5"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/question5"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_str"
                android:paddingLeft="10dp"
                android:layout_marginLeft="70dp"
                android:id="@+id/question5_true"
                android:layout_marginRight="100dp"
                android:layout_below="@id/question5"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_str"
                android:paddingLeft="10dp"
                android:id="@+id/question5_false"
                android:layout_toRightOf="@id/question5_true"
                android:layout_below="@id/question5"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question6"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/question6"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_str"
                android:paddingLeft="10dp"
                android:layout_marginLeft="70dp"
                android:id="@+id/question6_true"
                android:layout_marginRight="100dp"
                android:layout_below="@id/question6"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_str"
                android:paddingLeft="10dp"
                android:id="@+id/question6_false"
                android:layout_toRightOf="@id/question6_true"
                android:layout_below="@id/question6"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question7"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/question7"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_str"
                android:paddingLeft="10dp"
                android:layout_marginLeft="70dp"
                android:id="@+id/question7_true"
                android:layout_marginRight="100dp"
                android:layout_below="@id/question7"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_str"
                android:id="@+id/question7_false"
                android:paddingLeft="10dp"
                android:layout_toRightOf="@id/question7_true"
                android:layout_below="@id/question7"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question8"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/question8"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_str"
                android:paddingLeft="10dp"
                android:layout_marginLeft="70dp"
                android:id="@+id/question8_true"
                android:layout_marginRight="100dp"
                android:layout_below="@id/question8"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_str"
                android:paddingLeft="10dp"
                android:id="@+id/question8_false"
                android:layout_toRightOf="@id/question8_true"
                android:layout_below="@id/question8"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question9"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/question9"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_str"
                android:paddingLeft="10dp"
                android:layout_marginLeft="70dp"
                android:id="@+id/question9_true"
                android:layout_marginRight="100dp"
                android:layout_below="@id/question9"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_str"
                android:paddingLeft="10dp"
                android:id="@+id/question9_false"
                android:layout_toRightOf="@id/question9_true"
                android:layout_below="@id/question9"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question10"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/question10"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_str"
                android:paddingLeft="10dp"
                android:layout_marginLeft="70dp"
                android:id="@+id/question10_true"
                android:layout_marginRight="100dp"
                android:layout_below="@id/question10"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_str"
                android:id="@+id/question10_false"
                android:paddingLeft="10dp"
                android:layout_toRightOf="@id/question10_true"
                android:layout_below="@id/question10"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submitAns"
                android:layout_below="@id/question10_true"
                android:layout_centerHorizontal="true"
                android:onClick="submitAnswers"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:id="@+id/message_view"
            />

    </LinearLayout>
</ScrollView>